--- a/api/composer.json
+++ b/api/composer.json
@@ -22,6 +22,7 @@
         "barryvdh/laravel-cors": "^0.11.3"
     },
     "require-dev": {
+        "appointer/swaggervel": "^2.3",
         "beyondcode/laravel-dump-server": "^1.0",
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
